# suvidha-city-chemist-frontend

./: .gitignore  .replit  QUICK_START.md  README.md  package-lock.json  package.json  pyproject.toml  replit.md  seed.ts  start.sh  vite.config.ts
ai-service/: app.py  customer_segmentation.py  demand_forecast.py  expiry_risk.py  requirements.txt  sales_trends.py
attached_assets/: Pasted-Suvidha-City-Chemist-Pharmacy-Pro-System-Build-a-full-s_1772341938537.txt
client/src/: App.tsx
client/src/components/: Layout.tsx
client/src/pages/: Customers.tsx  Dashboard.tsx  Inventory.tsx  Login.tsx  OnlineOrders.tsx  Products.tsx  PurchaseOrders.tsx  Reports.tsx  Sales.tsx  Settings.tsx  Suppliers.tsx  Users.tsx
migrations/: db.sql
server/: ai-client.ts  db.ts  index.ts  routes.ts  vite.ts  whatsapp.ts
shared/: schema.ts
